@@ -49,6 +49,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 22353) Categorised recent changes now works again
 * (bug 22747) "Reveal my e-mail address in notification e-mails" preference is
   now only displayed when relevant
+* (bug 22772) {{#special:}} parser function now works with subpages
 
 == API changes in 1.17 ==
 * (bug 22738) Allow filtering by action type on query=logevent
